--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,10 @@ jobs:
           - rust: stable
           - rust: beta
           - rust: nightly
-          # TODO
-          # - rust: stable
-          #   target: aarch64-unknown-linux-gnu
-          # - rust: nightly
-          #   target: aarch64-unknown-linux-gnu
+          - rust: stable
+            target: aarch64-unknown-linux-gnu
+          - rust: nightly
+            target: aarch64-unknown-linux-gnu
           - rust: stable
             target: i586-unknown-linux-gnu
           - rust: nightly
