--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ Atomic operations on potentially uninitialized integers.
 
 [package.metadata.docs.rs]
 targets = [
-    # TODO
-    # "aarch64-unknown-linux-gnu",
+    "aarch64-unknown-linux-gnu",
     "i686-unknown-linux-gnu",
     "riscv64gc-unknown-linux-gnu",
     "x86_64-unknown-linux-gnu",
