--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ Atomic operations on potentially uninitialized integers.
 [package.metadata.docs.rs]
 targets = [
     "aarch64-unknown-linux-gnu",
+    "armv7-unknown-linux-gnueabihf",
     "i686-unknown-linux-gnu",
     "riscv64gc-unknown-linux-gnu",
     "x86_64-unknown-linux-gnu",
