--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,16 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: i686-unknown-linux-gnu
+          - rust: nightly
+            target: mips-unknown-linux-gnu
+            os: ubuntu-18.04
+          - rust: nightly
+            target: mipsel-unknown-linux-gnu
+          - rust: nightly
+            target: mips64-unknown-linux-gnuabi64
+            os: ubuntu-18.04
+          - rust: nightly
+            target: mips64el-unknown-linux-gnuabi64
           - rust: stable
             target: riscv64gc-unknown-linux-gnu
           - rust: nightly
