--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ resolver = "2"
 [dev-dependencies]
 crossbeam-utils = "0.8"
 paste = "1"
+quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + lower MSRV
