--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,14 @@ jobs:
             os: ubuntu-18.04
           - rust: nightly
             target: mips64el-unknown-linux-gnuabi64
+          - rust: nightly
+            target: powerpc-unknown-linux-gnu
+            os: ubuntu-18.04
+          - rust: nightly
+            target: powerpc64-unknown-linux-gnu
+            os: ubuntu-18.04
+          - rust: nightly
+            target: powerpc64le-unknown-linux-gnu
           - rust: stable
             target: riscv64gc-unknown-linux-gnu
           - rust: nightly
