Improve powerpc64 support
- powerpc64le is pwr8+
- Provide 128-bit atomics and {8,16}-bit atomic swap for powerpc64 (be) on pwr8+
- Clarify type of registers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,9 @@ jobs:
         with:
           target: ${{ matrix.target }}
         if: matrix.target != ''
+      - run: |
+          echo "RUSTFLAGS=${RUSTFLAGS} --cfg qemu" >>"${GITHUB_ENV}"
+        if: startsWith(matrix.target, 'powerpc64')
 
       - run: cargo test -vv --workspace --all-features $DOCTEST_XCOMPILE
       - run: cargo test -vv --workspace --all-features --release $DOCTEST_XCOMPILE
@@ -126,18 +129,18 @@ jobs:
       # pwr8
       - run: cargo test -vv --workspace --all-features $DOCTEST_XCOMPILE
         env:
-          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8 --cfg qemu
-        if: startsWith(matrix.target, 'powerpc64le')
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8
+        if: startsWith(matrix.target, 'powerpc64-')
       - run: cargo test -vv --workspace --all-features --release $DOCTEST_XCOMPILE
         env:
-          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8 --cfg qemu
-        if: startsWith(matrix.target, 'powerpc64le')
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8
+        if: startsWith(matrix.target, 'powerpc64-')
       - run: cargo test -vv --workspace --all-features --release $DOCTEST_XCOMPILE
         env:
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
           CARGO_PROFILE_RELEASE_LTO: fat
-          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8 --cfg qemu
-        if: startsWith(matrix.target, 'powerpc64le')
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8
+        if: startsWith(matrix.target, 'powerpc64-')
 
       - run: cargo minimal-versions build -vvv --workspace --all-features --ignore-private
         if: startsWith(matrix.rust, 'nightly')
