--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -253,7 +253,7 @@ jobs:
 
   ci-success:
     name: ci
-    if: success()
+    if: github.event_name == 'push' && success()
     needs:
       - test
       - build
