--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
           - rust: stable
           - rust: beta
           - rust: nightly
+          - rust: nightly
+            os: macos-latest
           - rust: stable
             target: aarch64-unknown-linux-gnu
           - rust: nightly
@@ -110,6 +112,25 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
           CARGO_PROFILE_RELEASE_LTO: fat
+
+      # +cmpxchg16b
+      - run: cargo test -vv --workspace --all-features $DOCTEST_XCOMPILE
+        env:
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+cmpxchg16b
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+cmpxchg16b
+        if: matrix.target == '' || startsWith(matrix.target, 'x86_64')
+      - run: cargo test -vv --workspace --all-features --release $DOCTEST_XCOMPILE
+        env:
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+cmpxchg16b
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+cmpxchg16b
+        if: matrix.target == '' || startsWith(matrix.target, 'x86_64')
+      - run: cargo test -vv --workspace --all-features --release $DOCTEST_XCOMPILE
+        env:
+          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
+          CARGO_PROFILE_RELEASE_LTO: fat
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+cmpxchg16b
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+cmpxchg16b
+        if: matrix.target == '' || startsWith(matrix.target, 'x86_64')
 
       # +lse
       - run: cargo test -vv --workspace --all-features $DOCTEST_XCOMPILE
@@ -222,6 +243,21 @@ jobs:
           CARGO_PROFILE_RELEASE_LTO: fat
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind
+      # +cmpxchg16b
+      - run: cargo test -vv --workspace --all-features -Z doctest-xcompile
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
+      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
+      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+        env:
+          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
+          CARGO_PROFILE_RELEASE_LTO: fat
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
 
   tidy:
     runs-on: ubuntu-latest
