--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ env:
   RUSTFLAGS: -D warnings
   RUSTUP_MAX_RETRIES: '10'
 
-aarch64_linux_task:
+aarch64_linux_test_task:
   name: test (aarch64-unknown-linux-gnu)
   env:
     TARGET: aarch64-unknown-linux-gnu
@@ -30,7 +30,7 @@ aarch64_linux_task:
     - RUSTFLAGS="$RUSTFLAGS -C target-feature=+lse" RUSTDOCFLAGS="$RUSTDOCFLAGS -C target-feature=+lse" CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1 CARGO_PROFILE_RELEASE_LTO=fat cargo -Z build-std test -vv --workspace --all-features --release --tests --target $TARGET
     # TODO: lse2 is not available on Graviton2 (armv8.2-a)
 
-aarch64_macos_task:
+aarch64_macos_test_task:
   name: test (aarch64-apple-darwin)
   env:
     TARGET: aarch64-apple-darwin
@@ -47,7 +47,7 @@ aarch64_macos_task:
     # Use -Z build-std because the prebuilt libtest seems to be incompatible with LTO, causing miscompilation: https://gist.github.com/taiki-e/9713f8e02e8f9f852ccee8d6f089ec24
     - CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1 CARGO_PROFILE_RELEASE_LTO=fat cargo -Z build-std test -vv --workspace --all-features --release --tests --target $TARGET
 
-valgrind_task:
+aarch64_linux_valgrind_task:
   name: valgrind (aarch64-unknown-linux-gnu)
   env:
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUNNER: valgrind -v --error-exitcode=1 --error-limit=no --leak-check=full --show-leak-kinds=all --track-origins=yes
