--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,31 +266,31 @@ jobs:
           persist-credentials: false
       - uses: dtolnay/rust-toolchain@nightly
       - uses: taiki-e/install-action@valgrind
-      # -Z doctest-xcompile is needed to apply CARGO_TARGET_*_RUNNER to doctest.
-      - run: cargo test -vv --workspace --all-features -Z doctest-xcompile
+      # doctests with valgrind are very slow
+      - run: cargo test -vv --workspace --all-features --tests
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind
-      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+      - run: cargo test -vv --workspace --all-features --release --tests
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind
-      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+      - run: cargo test -vv --workspace --all-features --release --tests
         env:
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
           CARGO_PROFILE_RELEASE_LTO: fat
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind
       # +cmpxchg16b
-      - run: cargo test -vv --workspace --all-features -Z doctest-xcompile
+      - run: cargo test -vv --workspace --all-features --tests
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
-      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+      - run: cargo test -vv --workspace --all-features --release --tests
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
-      - run: cargo test -vv --workspace --all-features --release -Z doctest-xcompile
+      - run: cargo test -vv --workspace --all-features --release --tests
         env:
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
           CARGO_PROFILE_RELEASE_LTO: fat
