--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -73,7 +73,7 @@ aarch64_linux_valgrind_task:
       cd ..
       rm -rf valgrind
   test_script:
-    # doctests with valgrind are very slow
+    # doctests on Valgrind are very slow
     - cargo test -vv --workspace --all-features --tests
     - cargo test -vv --workspace --all-features --release --tests
     # Use -Z build-std because the prebuilt libtest seems to be incompatible with LTO, causing miscompilation: https://gist.github.com/taiki-e/9713f8e02e8f9f852ccee8d6f089ec24
