--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ targets = [
 resolver = "2"
 
 [dev-dependencies]
+crossbeam-utils = "0.8"
 fastrand = "1"
 paste = "1"
 quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + lower MSRV
