--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,6 +10,7 @@ env:
 
 aarch64_linux_test_task:
   name: test (aarch64-unknown-linux-gnu)
+  auto_cancellation: $CIRRUS_BRANCH != 'main'
   env:
     TARGET: aarch64-unknown-linux-gnu
     RUSTDOCFLAGS: -D warnings --cfg weak_memory
@@ -32,6 +33,7 @@ aarch64_linux_test_task:
 
 aarch64_macos_test_task:
   name: test (aarch64-apple-darwin)
+  auto_cancellation: $CIRRUS_BRANCH != 'main'
   env:
     TARGET: aarch64-apple-darwin
     RUSTDOCFLAGS: -D warnings --cfg weak_memory
@@ -49,6 +51,7 @@ aarch64_macos_test_task:
 
 aarch64_linux_valgrind_task:
   name: valgrind (aarch64-unknown-linux-gnu)
+  auto_cancellation: $CIRRUS_BRANCH != 'main'
   env:
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUNNER: valgrind -v --error-exitcode=1 --error-limit=no --leak-check=full --show-leak-kinds=all --track-origins=yes
     RUSTDOCFLAGS: -D warnings --cfg valgrind
