--- a/target-specs/riscv64i-unknown-none-elf.json
+++ b/target-specs/riscv64i-unknown-none-elf.json
@@ -3,7 +3,7 @@
   "atomic-cas": false,
   "code-model": "medium",
   "cpu": "generic-rv64",
-  "data-layout": "e-m:e-p:64:64-i8:8-i16:16-i32:32-i64:64-i128:128-n64-S128",
+  "data-layout": "e-m:e-p:64:64-i64:64-i128:128-n64-S128",
   "eh-frame-header": false,
   "emit-debug-gdb-scripts": false,
   "linker": "rust-lld",
