--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,10 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-          - rust: nightly
-            target: aarch64_be-unknown-linux-gnu
-            os: ubuntu-22.04
+          # TODO: broken since nightly-2022-10-28
+          # - rust: nightly
+          #   target: aarch64_be-unknown-linux-gnu
+          #   os: ubuntu-22.04
           - rust: stable
             target: arm-unknown-linux-gnueabi
           - rust: nightly
