--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,9 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-          # TODO: broken since nightly-2022-10-28
-          # - rust: nightly
-          #   target: aarch64_be-unknown-linux-gnu
-          #   os: ubuntu-22.04
+          - rust: nightly
+            target: aarch64_be-unknown-linux-gnu
+            os: ubuntu-22.04
           - rust: stable
             target: arm-unknown-linux-gnueabi
           - rust: nightly
